--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>com.itndev</groupId>
     <artifactId>Factions</artifactId>
-    <version>Beta-0.6.5</version>
+    <version>Beta-0.7.1</version>
     <packaging>jar</packaging>
 
     <name>Factions</name>
 
-    <description>Faciton Server Plugin</description>
+    <description>Faction Server Plugin</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
