--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,11 @@ name: Factions
 version: '${project.version}'
 main: com.itndev.factions.Main
 api-version: 1.16
-depend: [ ProtocolLib, PlaceholderAPI, Vault ]
+depend: [ ProtocolLib, PlaceholderAPI, Vault, AdvancedBan ]
 authors: [ Itndev, Jea ]
 description: Faciton Server Plugin
 commands:
   국가:
     description: Faction Main Command
+  factionadmin:
+    description: Admin Commands
