--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.itndev</groupId>
     <artifactId>Factions</artifactId>
-    <version>Beta-1.0.6</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>Factions</name>
